4.3 Regrssion: Assigning existing material to new object crashes #125669

Closed
opened 2024-07-30 17:03:48 +02:00 by Nikhil Shringarpurey · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.70

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-07-30 14:13, hash: ba1f7caffaca
Worked: 4.3.0 main 2024-07-28 9e88ff1b4bc4
Worked: 4.2

Short description of error
Assigning an existing material to a new object crashes blender with attached crash report.

Exact steps for others to reproduce the error

  1. Create new scene.
  2. Delete default cube.
  3. Create plane
  4. Try to assign the existing "Material" material to the plane.
  5. Blender crashes with attached dump.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.70 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-07-30 14:13, hash: `ba1f7caffaca` Worked: 4.3.0 main 2024-07-28 `9e88ff1b4bc4` Worked: 4.2 **Short description of error** Assigning an existing material to a new object crashes blender with attached crash report. **Exact steps for others to reproduce the error** 1. Create new scene. 2. Delete default cube. 3. Create plane 4. Try to assign the existing "Material" material to the plane. 5. Blender crashes with attached dump. 6.
Nikhil Shringarpurey added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-30 17:03:49 +02:00

Can reproduce using daily builds.

System Information
Operating system: Windows-10-10.0.17763-SP0 x64
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 | 4.6.0 NVIDIA 556.12

Blender Version
Broken: 4.3.0 main 2024-07-29 0c09d3877448
Worked: 4.3.0 main 2024-07-28 9e88ff1b4bc4

Can reproduce using daily builds. **System Information** Operating system: Windows-10-10.0.17763-SP0 x64 Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 | 4.6.0 NVIDIA 556.12 **Blender Version** Broken: 4.3.0 `main` 2024-07-29 `0c09d3877448` Worked: 4.3.0 `main` 2024-07-28 `9e88ff1b4bc4`
Alaska changed title from Assigning existing material to new object - crashes 4.3 alpha to 4.3 Regrssion: Assigning existing material to new object crashes 2024-07-31 03:22:19 +02:00
Member

Bisecting points to d30d8b4bfa as the cause

CC @lone_noel

Bisecting points to d30d8b4bfa0c5d586af54ddbac439e392081ca70 as the cause CC @lone_noel
Member

Thanks, @Alaska! Will try to fix asap.

Thanks, @Alaska! Will try to fix asap.
Leon Schittek self-assigned this 2024-07-31 06:50:06 +02:00
Member

Was looking into this. AFAICS, crash due to func_argN_free_fn being null (and unexpectedly func_argN is not null) is instead caused by the python separator button added in EEVEE_MATERIAL_PT_context_material

Was looking into this. AFAICS, crash due to `func_argN_free_fn` being null (and unexpectedly `func_argN` is not null) is instead caused by the python separator button added in `EEVEE_MATERIAL_PT_context_material`
Member

Was looking into this. AFAICS, crash due to func_argN_free_fn being null (and unexpectedly func_argN is not null) is instead caused by the python separator button added in EEVEE_MATERIAL_PT_context_material

@PratikPB2123 That was helpful, thanks!

> Was looking into this. AFAICS, crash due to `func_argN_free_fn` being null (and unexpectedly `func_argN` is not null) is instead caused by the python separator button added in `EEVEE_MATERIAL_PT_context_material` @PratikPB2123 That was helpful, thanks!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-05 23:40:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#125669
No description provided.